Configuração inicial do Spring Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.profiles.active=dev
+spring.profiles.active=test
 
 default.sender=llucasilvv@gmail.com
 default.recipient=llucasilvv@gmail.com
