implementando autenticacao e geracao de token JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.profiles.active=test
 
 default.sender=llucasilvv@gmail.com
 default.recipient=llucasilvv@gmail.com
+
+jwt.secret=SequenciaDeCaracteresParaAssinarToken
+jwt.expiration=60000
