--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,9 @@ default.sender=llucasilvv@gmail.com
 default.recipient=llucasilvv@gmail.com
 
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
-jwt.expiration=60000
+jwt.expiration=86400000
+
+aws.access_key_id=
+aws.secret_access_key=
+s3.bucket=curso-spring-ionic-2021
+s3.region=sa-east-1
